--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.1",
+    "redux": "^5.0.1",
     "use-immer": "^0.11.0"
   },
   "devDependencies": {
